0919 13:59 忽 更新購物車為空重新導向產品頁面

--- a/views/cart.ejs
+++ b/views/cart.ejs
@@ -252,9 +252,18 @@
                             console.log(e)
                             if (typeof (e) == 'string') {
                                 items = JSON.parse(e);
+                            } else if (e == '') {
+                                Swal.fire({
+                                    title: '購物車是空的，請先進行選購',
+                                    icon: 'warning',
+                                    showConfirmButton: false,
+                                    timer: 1500
+                                });
+                                setTimeout(()=>{document.location.href = "/product";},1500)
                             } else {
                                 items = e;
                             }
+
                             $("#cartitems").empty();
                             $.each(items, function (index, item) {
                                 item.c_option ? item.c_option = item.c_option : item.c_option = '';
