--- a/views/order.ejs
+++ b/views/order.ejs
@@ -2,6 +2,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>填寫訂單資料</title>
+    <link rel="icon" href="/img/fruitbox_s.png">
 
     <!-- vg style -->
     <%- include('share/head_link.ejs') %>
