--- a/views/orderplaced.ejs
+++ b/views/orderplaced.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>訂購成功</title>
+    <title>Vege訂購成功</title>
+    <link rel="icon" href="/img/fruitbox_s.png">
 
     <!-- vg style -->
     <%- include('share/head_link.ejs') %>
