--- a/views/orderprocessing.ejs
+++ b/views/orderprocessing.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>訂單傳送中...</title>
+    <link rel="icon" href="/img/fruitbox_s.png">
 
     <!-- vg style -->
     <%- include('share/head_link.ejs') %>
