--- a/views/rateorder.ejs
+++ b/views/rateorder.ejs
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>評價訂單</title>
-
+    <title>Vege評價訂單</title>
+    <link rel="icon" href="/img/fruitbox_s.png">
     <!-- vg style -->
     <%- include('share/head_link.ejs') %>
         <link rel="stylesheet" href="css/cart.css">
