--- a/views/activityboard_inside.ejs
+++ b/views/activityboard_inside.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title><%= data[0].actTitle %></title>
+    <link rel="icon" href="/img/fruitbox_s.png">
     <link rel="stylesheet" href="css/blog.css">
     <%- include('share/head_link.ejs') %>
 
