--- a/views/product.ejs
+++ b/views/product.ejs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vege產品資訊</title>
+    <link rel="icon" href="/img/fruitbox_s.png">
     <%- include('share/head_link') %>
     <link rel="stylesheet" href="css/Product_Page.css" />
     <link
