--- a/views/about.ejs
+++ b/views/about.ejs
@@ -3,7 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Vege關於我們</title>
+    <link rel="icon" href="/img/fruitbox_s.png">
     <%- include('share/head_link.ejs') %>
     <link rel="stylesheet" href="css/aboutUs.css" />
     <link
