--- a/views/m_mycards.ejs
+++ b/views/m_mycards.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>會員中心</title>
+    <link rel="icon" href="/img/fruitbox_s.png">
 
     <%- include('share/head_link.ejs') %>
     
