--- a/views/qna.ejs
+++ b/views/qna.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vege常見QA</title>
+    <link rel="icon" href="/img/fruitbox_s.png">
     <%- include('share/head_link.ejs') %>
         <link rel="stylesheet" href="css/qna.css">
 </head>
