--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,7 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Vege會員註冊</title>
+    <link rel="icon" href="/img/fruitbox_s.png">
     <%- include('share/head_link.ejs') %>
         <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
         <link rel="stylesheet" href="css/contactUs.css">
