--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -192,18 +192,7 @@
                             // setTimeout(function () {
                             //     $('#successMsg').slideUp(1000);
                             // }, 3000);
-                            const Toast = Swal.mixin({
-                                toast: true,
-                                position: 'center',
-                                showConfirmButton: false,
-                                timer: 3000,
-                                timerProgressBar: false,
-                            })
 
-                            Toast.fire({
-                                icon: 'success',
-                                title: '訊息送出成功! <br>我們會盡速與您聯絡，請留意您的信箱。'
-                            })
 
                             // 舊寫法
                             // var xhttp = new XMLHttpRequest();
@@ -220,10 +209,29 @@
                                 },
                                 body: JSONData
                             })
+                                .then(function (res) {
+                                    return res.json();
+                                })
+                                .then(function (jsonObj) {
+                                    
+                                    const Toast = Swal.mixin({
+                                        toast: true,
+                                        position: 'center',
+                                        showConfirmButton: false,
+                                        timer: 3000,
+                                        timerProgressBar: false,
+                                    })
+                                    Toast.fire({
+                                        icon: 'success',
+                                        title: '訊息送出成功! <br>我們會盡速與您聯絡，請留意您的信箱。'
+                                    })
+                                    setTimeout(function () {
+                                        location.reload();
+                                    }, 1000);
 
-                            setTimeout(function () {
-                                location.reload();
-                            }, 1000);
+                                })
+
+
                         }
 
 
