--- a/views/product.ejs
+++ b/views/product.ejs
@@ -100,6 +100,7 @@
                     <div class="fv_con">
                       <label for="commodity" class="vg-p">選擇商品:</label>
                       <select class="commodity">
+                        <option></option>
                         <option value="once" data-size="s">
                           雙人箱(1~2人)
                         </option>
@@ -108,7 +109,6 @@
                         </option>
                       </select>
                       <br />
-
                       <p class="p-0 m-0">
                         總金額: <span class="toal price4"></span>
                       </p>
@@ -157,7 +157,7 @@
                       ></span
                       ><br />
 
-                      <p class="d-inline vg-h5">內容:</p>
+                      <p class="d-inline">內容:</p>
                       <strong class="buyfv buyfv2"></strong>
                     </div>
                     <button class="btn btn-vg chage ms-1 mt-3">選擇蔬果</button>
@@ -188,7 +188,7 @@
                   <h5 class="vg-h5">價格:</h5>
                   <p>30day一期運費160元 、60day 一期運費290元</p>
                   <label for="commodity" class="vg-h5">商品規格</label>
-                  <select name="commodity" class="commodity">
+                  <select class="commodity">
                     <option value="30d" data-size="s">雙人箱(30day)</option>
                     <option value="60d" data-size="l">雙人箱(60day)</option>
                     <option value="30d" data-size="s">家庭箱(30day)</option>
@@ -252,9 +252,9 @@
                   ></span
                   ><br />
                   <div class="fv_con">
-                    <h5 class="d-inline vg-h5">內容:</h5>
+                    <p class="d-inline">內容:</p>
                     <br />
-                    <strong class="buyfv commodity"></strong>
+                    <strong class="buyfv"></strong>
                   </div>
                   <button class="btn btn-vg chage m-0">選擇蔬果</button>
                   <button class="btn btn-vg w-50 m-0 addCard">
@@ -305,7 +305,7 @@
                   </p>
                   <h5 class="vg-h5">選擇商品規格:</h5>
                   <label for="commodity">選擇商品:</label>
-                  <select class="commodity" id="commodity">
+                  <select class="commodity">
                     <option></option>
                     <option value="once" data-size="s">雙人箱(1~2人)</option>
                     <option value="once" data-size="l">家庭箱(3~4人)</option>
@@ -343,7 +343,6 @@
                       訂閱一期享有運費優惠！
                     </span>
                   </h5>
-
                   <p>雙人箱(1~2人) <span class="sp2">一期運費160元</span></p>
                   <p>家庭箱(3~4人) <span class="sp2">一期運費290元</span></p>
                   <h5 class="vg-h5">價格:</h5>
@@ -361,7 +360,7 @@
                   </p>
                   <h5 class="vg-h5">選擇商品規格:</h5>
                   <label for="commodity">選擇商品:</label>
-                  <select name="commodity" class="commodity">
+                  <select class="commodity">
                     <option></option>
                     <option value="30d" data-size="s">雙人箱(30day)</option>
                     <option value="60d" data-size="l">雙人箱(60day)</option>
