--- a/lib/css/Product_Page.css
+++ b/lib/css/Product_Page.css
@@ -16,6 +16,7 @@ a:hover {
 body {
   min-width: 400px;
   overflow: auto;
+  color: var(--text-color);
 }
 
 header {
@@ -52,6 +53,7 @@ header main#product_main section.main-box aside.asideNav {
   display: flex;
   text-align: center;
   flex-direction: column;
+  margin-top: 90px;
 }
 
 @media screen and (max-width: 1100px) {
@@ -63,33 +65,12 @@ header main#product_main section.main-box aside.asideNav {
   }
 }
 
-.smtext {
-  margin-top: 35px;
-}
-.smtext1 {
-  width: 100%;
-  height: 200px;
-  background-color: rgb(251, 249, 237);
-  border-radius: 10px;
-
-  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
-}
-
 header main#product_main section.main-box aside.asideNav ul.asideNav-ul {
-  /* display: flex;  */
   padding: 0;
   list-style-type: none;
-  /* flex-direction: column; */
   width: 100%;
 }
-/* @media screen and (max-width: 1100px) {
-  header main#product_main section.main-box aside.asideNav ul.asideNav-ul {
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    margin-top: 20px;
-  }
-} */
+
 header main#product_main section.main-box aside.asideNav ul.asideNav-ul li {
   width: 100%;
 }
@@ -597,3 +578,22 @@ h5 {
   border: 0.3px solid black;
   padding: 2px;
 } */
+
+.smtext {
+  margin-top: 30px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 400px;
+  height: 200px;
+  border-radius: 14px;
+  padding-left: 20px;
+  background: #fbf9ed;
+  box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
+}
+
+.fa-thumbtack {
+  position: absolute;
+  right: 0;
+  top: 0;
+}
