--- a/views/product.ejs
+++ b/views/product.ejs
@@ -14,8 +14,7 @@
   </head>
   <body>
     <div class="black"></div>
-
-    <%- include('share/header') %>
+    <%- include('share/modal') %> <%- include('share/header') %>
     <header>
       <main id="product_main">
         <section class="main-box">
